
.. note::

   As of version 0.13.0, Flask-Restless supports Python 2.6, 2.7, and 3. Before
   that, it supported Python 2.5, 2.6, and 2.7.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.15.1-dev
------------------

Not yet released.

Version 0.15.0
--------------

Released on October 30, 2014.

- #320: detect settable hybrid properties instead of raising an exception.
- #350: allows exclude/include columns to be specified as SQLAlchemy column
  objects in addition to strings.
- #356: rollback the SQLAlchemy session on a failed :http:method:`patch`
  request.
- #368: adds missing documentation on using custom queries (see
  :ref:`customqueries`)

Version 0.14.2
--------------

Released on September 2, 2014.

- #351, #355: fixes bug in getting related models from a model with hybrid
  properties.

Version 0.14.1
--------------

Released on August 26, 2014.

- #210: lists some related projects in the documentation.
- #347: adds automated build testing for PyPy 3.
- #354: renames ``is_deleted`` to ``was_deleted`` when providing keyword
  arguments to postprocessor for :http:method:`delete` method in order to match
  documentation.

Version 0.14.0
--------------

Released on August 12, 2014.

- Fixes bug where primary key specified by user was not being checked in some
  :http:method:`post` requests and some search queries.
- #223: documents CORS example.
- #280: don't expose raw SQL in responses on database errors.
- #299: show error message if search query tests for ``NULL`` using comparison
  operators.
- #315: check for query object being ``None``.
- #324: :http:method:`delete` should only return :http:statuscode:`204` if
  something is actuall deleted.
- #325: support ``null`` inside ``has`` search operators.
- #328: enable automatic testing for Python 3.4.
- #333: enforce limit in :func:`helpers.count`.